--- a/lab2/blog.html
+++ b/lab2/blog.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
   <title>The Blog</title>
 </head>
 <body>
@@ -40,6 +41,6 @@
     <footer id="PageFooter">
       <a href="#">Legal Stuff</a>
     </footer>
-          
+
 </body>
 </html>
